@' phase1: security hardening
Harden authentication boundaries, token rotation, error handling, and request audit context.
'@

Co-authored-by: Cursor <cursoragent@cursor.com>